# try_actix_web

./: Cargo.toml  LICENSE  README.md
migrations/2023-09-02-142018_users/: up.sql
src/: controllers.rs  main.rs  models.rs  routes.rs  schema.rs
src/controllers/: index.rs  users.rs
src/models/: user.rs
