[package]
name = "try_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
diesel = { version = "2.1.1", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
log = "0.4.20"
simplelog = { version = "^0.12.1", features = ["paris"] }
